--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+chest_xray/
+tb_logs/
+
+#######################################
+# Python
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
